--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,14 @@
   "browser_action": {
     "default_icon": "icon.png"
   },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*",
+        "https://*/*"],
+      "js": ["scripts/trackMetaTags.js"],
+      "run_at": "document_end"
+    }
+  ],
 
   "background": {
     "scripts": ["scripts/background.js"],
@@ -22,6 +30,7 @@
     "unlimitedStorage",
     "identity",
     "sessions",
-    "downloads"
+    "downloads",
+    "<all_urls>"
   ]
 }
